; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/user32/extr_cursoricon.c_check_DrawIconEx.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/user32/extr_cursoricon.c_check_DrawIconEx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [142 x i8] c"Overlaying Mask %d on Color %06X with DrawIconEx flags %08X. Expected a close match to %06X (modern) or %06X (legacy). Got %06X from line %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32, i32, i32, i32, i32, i32, i32)* @check_DrawIconEx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_DrawIconEx(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6, i32 %7, i32 %8) #0 {
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  store i32 %0, i32* %10, align 4
  store i32 %1, i32* %11, align 4
  store i32 %2, i32* %12, align 4
  store i32 %3, i32* %13, align 4
  store i32 %4, i32* %14, align 4
  store i32 %5, i32* %15, align 4
  store i32 %6, i32* %16, align 4
  store i32 %7, i32* %17, align 4
  store i32 %8, i32* %18, align 4
  %21 = load i32, i32* %10, align 4
  %22 = load i32, i32* %13, align 4
  %23 = load i32, i32* %11, align 4
  %24 = call i32 @create_test_icon(i32 %21, i32 1, i32 1, i32 %22, i32 %23, i32* %12, i32 4)
  store i32 %24, i32* %20, align 4
  %25 = load i32, i32* %20, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %28, label %27

27:                                               ; preds = %9
  br label %59

28:                                               ; preds = %9
  %29 = load i32, i32* %10, align 4
  %30 = load i32, i32* %15, align 4
  %31 = call i32 @SetPixelV(i32 %29, i32 0, i32 0, i32 %30)
  %32 = load i32, i32* %10, align 4
  %33 = load i32, i32* %20, align 4
  %34 = load i32, i32* %14, align 4
  %35 = call i32 @DrawIconEx(i32 %32, i32 0, i32 0, i32 %33, i32 1, i32 1, i32 0, i32* null, i32 %34)
  %36 = load i32, i32* %10, align 4
  %37 = call i32 @GetPixel(i32 %36, i32 0, i32 0)
  store i32 %37, i32* %19, align 4
  %38 = load i32, i32* %19, align 4
  %39 = load i32, i32* %16, align 4
  %40 = call i64 @color_match(i32 %38, i32 %39)
  %41 = icmp ne i64 %40, 0
  br i1 %41, label %48, label %42

42:                                               ; preds = %28
  %43 = load i32, i32* %19, align 4
  %44 = load i32, i32* %17, align 4
  %45 = call i64 @color_match(i32 %43, i32 %44)
  %46 = call i64 @broken(i64 %45)
  %47 = icmp ne i64 %46, 0
  br label %48

48:                                               ; preds = %42, %28
  %49 = phi i1 [ true, %28 ], [ %47, %42 ]
  %50 = zext i1 %49 to i32
  %51 = load i32, i32* %11, align 4
  %52 = load i32, i32* %12, align 4
  %53 = load i32, i32* %14, align 4
  %54 = load i32, i32* %16, align 4
  %55 = load i32, i32* %17, align 4
  %56 = load i32, i32* %19, align 4
  %57 = load i32, i32* %18, align 4
  %58 = call i32 @ok(i32 %50, i8* getelementptr inbounds ([142 x i8], [142 x i8]* @.str, i64 0, i64 0), i32 %51, i32 %52, i32 %53, i32 %54, i32 %55, i32 %56, i32 %57)
  br label %59

59:                                               ; preds = %48, %27
  ret void
}

declare dso_local i32 @create_test_icon(i32, i32, i32, i32, i32, i32*, i32) #1

declare dso_local i32 @SetPixelV(i32, i32, i32, i32) #1

declare dso_local i32 @DrawIconEx(i32, i32, i32, i32, i32, i32, i32, i32*, i32) #1

declare dso_local i32 @GetPixel(i32, i32, i32) #1

declare dso_local i32 @ok(i32, i8*, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i64 @color_match(i32, i32) #1

declare dso_local i64 @broken(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
